# opencairn-monorepo

./: .dockerignore  .env.example  .gitattributes  .gitignore  .npmrc  AGENTS.md  CLA.md  CLAUDE.md  CODE_OF_CONDUCT.md  COMMERCIAL-LICENSING.md  CONTRIBUTING.md  LICENSE-COMMERCIAL.md  README.ko.md  README.md  SECURITY.md  docker-compose.yml  package.json  pnpm-lock.yaml  turbo.json
apps/worker/: .env.example  Dockerfile  pyproject.toml
apps/worker/benchmarks/: parser-fixtures.example.json
apps/worker/eval/research/: basic_scope_respect.yaml
apps/worker/scripts/: check_import_boundaries.py  ensure_librarian_schedule.py  ensure_note_analysis_drain_schedule.py  ensure_plan8_schedules.py  parser_benchmark.py  purge_canvas_outputs.py  purge_embedding_jsonl.py  run_code_preview_cleanup.py  start-worker.sh
apps/worker/src/runtime/: __init__.py  agent.py  default_hooks.py  events.py  hooks.py  langgraph_bridge.py  loop_runner.py  reducers.py  temporal.py  tool_declarations.py  tool_loop.py  tool_policy.py  tool_registry.py  tools.py  trajectory.py  usage.py
apps/worker/src/worker/: __init__.py  temporal_main.py
apps/worker/tests/: test_batch_embed_activities.py  test_batch_embed_workflow.py  test_batch_metrics.py  test_batch_submit_chunking.py  test_batch_timeouts.py  test_code_workspace_command_runner.py  test_code_workspace_install_runner.py  test_code_workspace_repair_planner.py  test_compiler_agent.py  test_drive_activities.py  test_enrichment_artifact_schema.py  test_import_activities.py  test_import_workflow.py  test_integration_crypto.py  test_librarian_agent.py  test_lit_import_activities.py  test_lit_import_workflow.py  test_markdown_import_activities.py  test_note_analysis_drain_schedule.py  test_note_analysis_jobs.py  test_notion_md_converter.py  test_parser_benchmark.py  test_plan8_schedules.py  test_purge_canvas_outputs.py  test_purge_embedding_jsonl.py  test_research_agent.py  test_run_code_preview_cleanup.py  test_temporal_main_code.py  test_unzip_notion_export.py
apps/worker/tests/activities/: test_chat_run_activity.py  test_code_activity.py  test_compiler_evidence.py  test_detect_content_type.py  test_doc_editor_activity.py  test_document_generation.py  test_enrich_document.py  test_event_emission.py  test_google_workspace_export.py  test_hwp_activity.py  test_office_activity.py  test_pdf_activity.py  test_socratic_activity.py  test_stt_activity.py  test_visualize_activity.py
apps/worker/tests/agents/: conftest.py  test_code_agent.py  test_code_prompts.py  test_connector_agent.py  test_curator_agent.py  test_doc_editor_agent.py  test_doc_editor_cite.py  test_doc_editor_commands.py  test_doc_editor_factcheck.py  test_narrator_agent.py  test_staleness_agent.py  test_synthesis_agent.py  test_tool_demo_agent_unit.py
apps/worker/tests/deep_research/: __init__.py  test_cost.py  test_create_plan.py  test_execute_research.py  test_finalize.py  test_iterate_plan.py  test_keys.py  test_markdown_plate.py  test_persist_report.py  test_workflow.py  test_workflow_finalize_wiring.py
apps/worker/tests/integration/: conftest.py  test_synthesis_export_smoke.py  test_tool_demo_agent.py
apps/worker/tests/lib/: test_api_client_evidence.py  test_api_client_expand.py  test_api_client_secret.py  test_canonical_document.py  test_ingest_events.py  test_mcp_secrets.py  test_office_pdf.py  test_opendataloader_pdf.py  test_parser_gateway.py  test_s3_client.py  test_s3_upload_bytes.py
apps/worker/tests/runtime/: conftest.py  test_agent.py  test_agent_run_with_tools.py  test_default_hooks.py  test_eval_case.py  test_eval_metrics.py  test_eval_runner.py  test_events.py  test_hooks.py  test_integration_echo_agent.py  test_reducers.py  test_temporal_helpers.py  test_tool_declarations.py  test_tool_loop_core.py  test_tool_loop_hard_guards.py  test_tool_loop_soft_guards.py  test_tool_loop_termination.py  test_tool_loop_types.py  test_tool_policy.py  test_tools.py  test_trajectory_local.py
apps/worker/tests/security/: conftest.py  test_tool_isolation.py  test_web_activity_ssrf.py  test_youtube_hostname.py
apps/worker/tests/tools_builtin/: conftest.py  test_builtin_tools_package.py  test_emit_structured.py  test_fetch_url.py  test_get_concept_graph.py  test_note_tools.py  test_retrieval_concept_tools.py  test_view_spec_schema.py
apps/worker/tests/workflows/: test_code_workflow.py  test_document_generation_workflow.py  test_google_workspace_export_workflow.py  test_ingest_enrichment.py  test_ingest_heartbeat.py  test_ingest_office_hwp_dispatch.py  test_study_session_recording_workflow.py  (+1 more)
(+1952 files in other folders)
