[project]
name = "opencairn-worker"
version = "0.1.0"
description = "OpenCairn Python worker: Temporal + LangGraph agent runtime"
requires-python = ">=3.12,<3.13"
dependencies = [
    "langgraph>=0.3.0,<0.4",
    "langgraph-checkpoint-postgres>=2.0.0",
    "langchain-core>=0.3.0,<0.4",
    "temporalio>=1.8.0",
    "pydantic>=2.6.0",
    "pydantic-settings>=2.2.0",
    "xxhash>=3.4.0",
    "asyncpg>=0.29.0",
    "pyyaml>=6.0",
    "opencairn-llm",
]

[project.optional-dependencies]
s3 = ["aioboto3>=12.0.0"]
sentry = ["sentry-sdk>=2.0.0"]
otel = ["opentelemetry-api>=1.25.0", "opentelemetry-sdk>=1.25.0"]

[tool.uv.sources]
opencairn-llm = { path = "../../packages/llm" }

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5.0",
    "ruff>=0.5.0",
    "pyright>=1.1.360",
    "testcontainers[postgres]>=4.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/runtime", "src/worker"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM", "TCH"]
ignore = []

[tool.pyright]
include = ["src", "tests"]
pythonVersion = "3.12"
strict = ["src/runtime"]
