[project]
name = "opencairn-worker"
version = "0.1.0"
description = "OpenCairn Python worker: Temporal + LangGraph agent runtime"
requires-python = ">=3.12,<3.13"
dependencies = [
    "langgraph>=0.3.0,<0.4",
    "langgraph-checkpoint-postgres>=2.0.0",
    "langchain-core>=0.3.0,<1.4",
    "temporalio>=1.8.0",
    "pydantic>=2.6.0",
    "pydantic-settings>=2.2.0",
    "xxhash>=3.4.0",
    "asyncpg>=0.29.0",
    "pyyaml>=6.0",
    "opencairn-llm",
    "minio>=7.2.9",
    "pymupdf>=1.24.0",
    "httpx>=0.27.0",
    "python-dotenv>=1.0.0",
    # STT fallback when provider.transcribe returns None (e.g. Ollama).
    # Large (~GB Whisper model downloaded on first use) — only invoked when
    # LLM_PROVIDER=ollama or similar. Gemini users never touch this.
    "faster-whisper>=1.0.3",
    # YouTube audio download for the ingest_youtube activity. Pinned above
    # the 2024.11 release that fixes the YouTube player extractor regression.
    "yt-dlp>=2024.11.4",
    # Web URL scraping for the scrape_web_url activity.
    "trafilatura>=1.12.0",
    # AES-256-GCM for user_integrations OAuth token storage. Wire-compatible
    # with apps/api/src/lib/integration-tokens.ts — both sides decrypt the
    # same rows written by /api/integrations/google/callback.
    "cryptography>=42.0",
    # Google Drive ingest (Plan: ingest-source-expansion Task 6). We use the
    # lower-level google-api-python-client rather than google-cloud-* since
    # the latter targets service accounts; OAuth-access-token flows are
    # simpler with the generic client.
    "google-api-python-client>=2.100",
    "google-auth>=2.23",
    # Notion MD → Plate conversion (Plan: ingest-source-expansion Task 8).
    # CommonMark-compliant, token-stream-based — we walk the tokens directly
    # rather than relying on an HTML intermediate so Plate elements like
    # wikilinks can be emitted inline without re-parsing.
    "markdown-it-py>=3.0",
    # Redis pub/sub + LIST replay for live ingest event emission
    # (Plan: live-ingest-visualization Task 3). Async client used by activities.
    "redis>=5.0,<6",
]

[project.optional-dependencies]
s3 = ["aioboto3>=12.0.0"]
sentry = ["sentry-sdk>=2.0.0"]
otel = ["opentelemetry-api>=1.25.0", "opentelemetry-sdk>=1.25.0"]

[tool.uv.sources]
opencairn-llm = { path = "../../packages/llm" }

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5.0",
    "ruff>=0.5.0",
    "pyright>=1.1.360",
    "testcontainers[postgres]>=4.0",
]

[project.scripts]
check-import-boundaries = "scripts.check_import_boundaries:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/runtime", "src/worker", "scripts"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "--import-mode=importlib"

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM", "TCH"]
ignore = []

[tool.pyright]
include = ["src", "tests"]
pythonVersion = "3.12"
strict = ["src/runtime"]
